<?xml version="1.0" encoding="utf-8"?>
<resources>
        <string name="app_name">Los AngelBus</string>
<string name="refreshButton">Refresh!</string>

<string name="runInBackgroundCheckbox">runInBackgroundKey</string>
<string name="showUnpredictableBusesCheckbox">showUnpredictableBusesKey</string>

<string name="hideCircleCheckbox">hideCircleCheckboxKey</string>
<string name="numOverlaysPreference">numOverlaysPreference</string>

<string name="showRouteLineCheckbox">showRouteLine</string>
<string name="showCoarseRouteLineCheckbox">showCoarseRouteLine</string>
<string name="initAllRouteInfoCheckbox2">initAllRouteInfo</string>
<string name="addToFavorites">Favorite</string>
<string name="removeFromFavorites">Favorite</string>
<string name="refresh">Refresh</string>
<string name="bostonsLocation">Los Angeles</string>
<string name="myLocation">My Location</string>
<string name="settings">Settings</string>
<string name="findingCurrentLocation">Finding current location...</string>
<string name="noProviders">Cannot use any location service.
Are any enabled (like GPS) in your system settings?</string>
<string name="locationUnavailable">Current location is unavailable</string>
<string name="showRoutePath">Show route path?</string>
<string name="updateContinuously">Update continuously</string>
<string name="showUnpredictableBuses">Show unpredictable buses?</string>
<string name="hideBlueCircle">Hide blue circle?</string>
<string name="hideBlueCircleSummary">This shows what buses are being viewed</string>
<string name="showRoutePathSummary">Draws a line along the selected route</string>
<string name="search_hint">Search routes and places</string>
<string name="search">Search</string>
<string name="chooseRoute">Routes</string>
<string name="searchHint">Search routes</string>
<string name="commentRoute">Routes: </string>
<string name="commentStop">Stops: </string>
<string name="commentOther">Problem?</string>
<string name="commentSubmit">Send feedback</string>
<string name="moreinfo">More Info</string>
<string name="reportproblem">Report problem</string>
<string name="basicInstructions">Hello &lt;br /&gt; World\n
3</string>
<string name="chooseStop">Favorite Stops</string>
<string name="chooseStopInBuilder">Choose a stop</string>
<string name="chooseRouteInBuilder">Choose a route</string>
<string name="noalerts">No Alerts</string>

    <string name="alwaysShowLocation">Always show location?</string>
    <string name="alwaysShowLocationCheckbox">gpsAlwaysOn</string>
    <string name="alwaysShowLocationSummary">Turns on location when app is in use</string>
</resources>
